--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="../../public/css/style.css" rel="stylesheet"></link>
+    <link href="css/style.css" rel="stylesheet"></link>
     <title>Document</title>
   </head>
   <body>
     Hello, world
-    <script src="../../public/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
